--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
+    "pinia": "^3.0.1",
     "swiper": "^11.2.5",
     "vue": "^3.5.13",
     "vue-router": "4"
